Fixed siteframe issue on small screens Fixed some components on smaller screens

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
@@ -25,12 +25,17 @@
 		}
 	}
 
+	@include respond-to(LARGE) {
+		.latest-articles {
+			justify-content: center;
+		}
+	}
+
 	@include respond-to(SMALL) {
 
 		.latest-articles {
 			padding-left: $sizeGrid;
 			padding-right: $sizeGrid;
-
 
 			.component-block-article-teaser:not(:first-child) {
 				display: none;
