--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
@@ -37,7 +37,6 @@
 		}
 	}
 
-
 	.component-map-slider {
 		@include size($sizeGrid * 28, $sizeGrid * 2);
 		@include pos(auto, auto, $sizeGrid, 50%);
@@ -46,6 +45,12 @@
 	}
 
 	// Breakpoints
+	@include respond-to(LARGE) {
+		.component-map-slider {
+			width: calc(100% - #{$sizeGrid * 2});
+		}
+	}
+
 	@include respond-to(SMALL) {
 		.aspect-ratio-wrapper {
 			&:before {
@@ -60,7 +65,7 @@
 		}
 
 		.map-content {
-			@include offset(0,0);
+			@include offset(0, 0);
 			margin: $sizeGrid 0 $sizeGrid*2 $sizeGrid*4;
 			width: calc(100% - #{$sizeGrid*6});
 			position: relative;
