--- a/deploy/htdocs/version/src/inc/style/component/block/_block-page-not-found.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-page-not-found.scss
@@ -27,4 +27,10 @@
 			margin-top: $sizeGrid;
 		}
 	}
+
+	@include respond-to(LARGE){
+		.error-code {
+			font-size: 50rem;
+		}
+	}
 }
